# plasma-ion-gismeteo

./: CMakeLists.txt  config.h.cmake  gismeteo-search.xq  gismeteo.xq  ion-gismeteo.desktop  ion_gismeteo.cpp  ion_gismeteo.h  kde-plasma-ion-gismeteo.spec
